[package]
name = "tunneler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy_prototype_lyon = "0.10.0"
euclid = "0.22.9"
image = "0.24.7"
marching_squares = { git = "https://github.com/d-dorazio/marching_squares", version = "0.1.0" }

rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
