[package]
name = "tunneler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_prototype_lyon = "0.11.0"
euclid = "0.22.9"
image = "0.25.0"
marching_squares = { git = "https://github.com/d-dorazio/marching_squares", version = "0.1.0" }

rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
